--- a/scss/base/sections/_section-analysis.scss
+++ b/scss/base/sections/_section-analysis.scss
@@ -7,6 +7,7 @@
         margin-left: 0;
         column-gap: 20px;
         justify-content: center;
+        width: 100%;
         .card{
             flex-grow: 1;
             flex-shrink: 1;
