--- a/templates/partials/_dataWorldSection.hbs
+++ b/templates/partials/_dataWorldSection.hbs
@@ -5,7 +5,7 @@
             <div class="card-header">
                 <div class="card-title">דוחות הֲיָ-DATA</div>
             </div>
-            <div class="card-content">
+            <div class="card-content scrollable-container">
                 <a target="_blank" class="data-card" href="https://datadashboard.health.gov.il/COVID-19/assets/other/hayadata_report2.pdf">
                     <div class="data-card__img"><img src="/public/media/images/report_lightblue.jpg"></div>
                     <div class="data-card__header">
@@ -28,7 +28,7 @@
             <div class="card-header">
                 <div class="card-title">GIS</div>
             </div>
-            <div class="card-content">
+            <div class="card-content scrollable-container">
                 <a target="_blank" class="data-card" href="https://experience.arcgis.com/experience/23d35bf0ccbc40d1ad5b5af92b967c95">
                     <div class="data-card__img"><img src="/public/media/images/map_sample4.jpg"></div>
                     <div class="data-card__header">
@@ -76,7 +76,7 @@
                     </a>
                 </div>
             </div>
-            <div class="card-content">
+            <div class="card-content scrollable-container">
                 <a target="_blank" class="data-card" id="gov-data-card-1" href="https://data.gov.il/dataset/covid-19/resource/d07c0771-01a8-43b2-96cc-c6154e7fa9bd">
                     <div class="data-card__header">
                         <div class="data-card__header__title">טבלת האזורים הסטטיסטיים</div>
