--- a/public/css/base/charts.css
+++ b/public/css/base/charts.css
@@ -1,10 +1,21 @@
 @import 'https://code.highcharts.com/css/highcharts.css';
+.chart {
+  width: 100%;
+  height: 265px;
+  max-height: 265px;
+  padding: 10px;
+}
+
 .highcharts-background {
   fill: var(--card-background-color);
 }
 
 .highcharts-title {
   fill: var(--chart-text-color);
+}
+
+#analysis .card {
+  padding-bottom: 0;
 }
 
 .highcharts-axis-title {
@@ -77,4 +88,20 @@
   stroke-width: 1.5px;
   stroke: var(--chart-text-color);
   transform: translateY(2px);
+}
+
+#actively-ill-by-vaccination .highcharts-grid-line {
+  stroke-width: 1px;
+}
+#actively-ill-by-vaccination .actively-ill-chart-crosshair {
+  stroke-opacity: 0.1;
+  stroke: var(--chart-text-color);
+  stroke-width: 10%;
+  transform: translateY(2px);
+}
+#actively-ill-by-vaccination .highcharts-point {
+  stroke-width: 0;
+}
+#actively-ill-by-vaccination .highcharts-legend-item > rect {
+  transform: scale(0.8) translate(2px, 4px);
 }
