--- a/scss/base/_cards.scss
+++ b/scss/base/_cards.scss
@@ -25,11 +25,20 @@
         padding: 16px 10px;
         // width: 30%;
         height: 350px;
+        max-height: 350px;
+        min-height: 350px;
         @media (max-width: 770px) {
             width: 100%;
         }
     }
-
+    .placeholder-text{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 2rem;
+        height: 100%
+    }
     .chart svg{
         width: 100%;
         height: 100%;
