--- a/templates/partials/_scripts.hbs
+++ b/templates/partials/_scripts.hbs
@@ -1,6 +1,7 @@
 {{!-- CDN Imports --}}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.23.0/axios.min.js"></script>
 {{!-- On load scripts --}}
+<script src="/public/js/general.js"></script>
 <script src="/public/js/switchTheme.js"></script>
 <script src="/public/js/hamburgerMenu.js"></script>
 <script src="/public/js/navbar.js"></script>
