--- a/templates/partials/_trafficLight.hbs
+++ b/templates/partials/_trafficLight.hbs
@@ -136,5 +136,8 @@
                 </table>
             </div>
         </div>
+        <div class="card">
+            <div class="placeholder-text">Placeholder Card</div>
+        </div>
     </div>       
 </div>
